[workspace]
resolver = "2"

exclude = [
    "sdk/dwallet-mpc-wasm",
]

members = [
    "crates/dwallet-mpc-centralized-party",
    "crates/dwallet-mpc-types",
    "crates/message-digest",
    "crates/dwallet-classgroups-types",
    "crates/ika",
    "crates/ika-config",
    "crates/ika-core",
    "crates/ika-node",
    "crates/ika-sui-client",
    "crates/ika-protocol-config",
    "crates/ika-protocol-config-macros",
    #"crates/ika-sdk",
    "crates/ika-swarm",
    "crates/ika-swarm-config",
    "crates/ika-telemetry",
    "crates/ika-types",
    "crates/ika-move-packages",
    "crates/ika-network",
    "crates/ika-archival",
]

[workspace.package]
# This version string will be inherited by ika-core, ika-node, ika-tools, ika-sdk, and ika crates.
version = "1.0.0"

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, ika binary size would be > 1GB.
strip = 'debuginfo'
# Exit process with SIGABRT when any thread panics
panic = 'abort'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
inherits = "test"
debug = true
debug-assertions = true
overflow-checks = true
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(msim)',
    'cfg(fail_points)',
] }

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
k256 = { version = "0.14.0-pre.9", features = ["arithmetic", "critical-section", "precomputed-tables", "serde", "ecdsa", "hash2curve", "alloc"], default-features = false }
mpc = { git = "https://github.com/dwallet-labs/inkrypto", rev = "29d2bcf"}
proof = { git = "https://github.com/dwallet-labs/inkrypto", rev = "29d2bcf"}
class_groups = { git = "https://github.com/dwallet-labs/inkrypto", rev = "29d2bcf", features = ["threshold"] }
commitment = { git = "https://github.com/dwallet-labs/inkrypto", rev = "29d2bcf" }
twopc_mpc = { git = "https://github.com/dwallet-labs/inkrypto", features = ["secp256k1", "class_groups"], rev = "29d2bcf"}
group = { git = "https://github.com/dwallet-labs/inkrypto", features = ["os_rng"], rev = "29d2bcf"}
homomorphic_encryption = { git = "https://github.com/dwallet-labs/inkrypto", rev = "29d2bcf"}
anyhow = "1.0.71"
arc-swap = { version = "1.5.1", features = ["serde"] }
assert_cmd = "2.0.6"
async-trait = "0.1.61"
axum = { version = "0.8", default-features = false, features = [
    "macros",
    "tokio",
    "http1",
    "http2",
    "json",
    "matched-path",
    "original-uri",
    "form",
    "query",
    "ws",
] }
backoff = { version = "0.4.0", features = [
    "futures",
    "futures-core",
    "pin-project-lite",
    "tokio",
    "tokio_1",
] }
base64 = "0.22.1"
bcs = "0.1.4"
byteorder = "1.4.3"
bytes = { version = "1.5.0", features = ["serde"] }
chrono = { version = "0.4.39", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
colored = "3.0.0"
count-min-sketch = "0.1.7"
criterion = { version = "0.6.0", features = [
    "async",
    "async_tokio",
    "html_reports",
] }
dashmap = "5.5.3"
# datatest-stable = "0.1.2"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
derive_more = "2.0.1"
dirs = "6.0.0"
ed25519 = { version = "2", features = ["pkcs8", "alloc", "zeroize"] }
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
flate2 = "1.0.28"
fs_extra = "1.3.0"
futures = "0.3.28"
governor = "0.6.0"
hex = "0.4.3"
http = "1"
humantime = "2.1.0"
im = "15"
indexmap = { version = "2.1.0", features = ["serde"] }
indicatif = "0.18.0"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
itertools = "0.14.0"
jemalloc-ctl = "^0.5"
jsonrpsee = { version = "0.25.1", features = ["server", "macros", "ws-client", "http-client", "jsonrpsee-core"] }
lru = "0.16.0"
merlin = { version = "3", default-features = false }
miette = { version = "7", features = ["fancy"] }
mockall = "0.13.1"
moka = { version = "0.12", default-features = false, features = [
    "sync",
    "atomic64",
] }
more-asserts = "0.3.1"
msim = { git = "https://github.com/MystenLabs/mysten-sim.git", rev = "2a170f4cd81c5cd10f5e4a5e810068f3045f41b6", package = "msim" }
nonempty = "0.11.0"
num-bigint = "0.4.4"
num_cpus = "1.15.0"
num_enum = "0.7.4"
object_store = { version = "0.11.2", features = [
    "aws",
    "gcp",
    "azure",
    "http",
] }
once_cell = "1.18.0"
parking_lot = "0.12.1"
pprof = { version = "0.15.0", features = ["cpp", "frame-pointer"] }
pretty_assertions = "1.3.0"
proc-macro2 = "1.0.47"
prometheus = "0.13.3"
quote = "1.0.23"
rand = "0.9"
rand_chacha = "0.9"
rayon = "1.5.3"
regex = "1.7.1"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
roaring = "0.11.1"
rstest = "0.25.0"
schemars = { version = "0.8.21", features = ["either"] }
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-env = "0.2.0"
serde-name = "0.2.1"
serde-reflection = "0.5.0"
serde_json = { version = "1.0.95", features = ["preserve_order"] }
serde_repr = "0.1"
serde_with = "3.8"
serde_yaml = "0.9.34+deprecated"
signature = "3.0.0-rc.1"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
syn = { version = "2.0.104", features = ["full", "derive", "extra-traits"] }
tap = "1.0.1"
tempfile = "3.20.0"
test-fuzz = "7.2.0"
thiserror = "2.0.12"
tokio = "1.44.2"
tokio-retry = "0.3"
tokio-stream = { version = "0.1.14", features = ["sync", "net"] }
tonic = { version = "0.13.1", features = [
    "zstd",
    "transport",
    "tls-webpki-roots",
] }
tonic-build = { version = "0.13.1", features = ["prost", "transport"] }
tonic-health = "0.13.1"
tower = { version = "0.5", features = [
    "full",
    "util",
    "timeout",
    "load-shed",
    "limit",
] }
twox-hash = "2.1.1"
tracing = "0.1.37"
url = "2.3.1"
zeroize = "1.6.0"
shlex = "1.3.0"

# Move dependencies
move-binary-format = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
move-bytecode-utils = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
move-compiler = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
move-package = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
move-symbol-pool = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
move-core-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }


fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }

# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "9c52c3c7946532163a79129db15180cdb984bab4" }

### Sui Members ###
bin-version =  { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
mysten-common = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
mysten-metrics = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
mysten-network = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
mysten-service = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
shared-crypto = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-config = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-faucet = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-graphql-rpc = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-indexer = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-json = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-json-rpc-api = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-keys = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-macros = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-metrics-push-client = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-move = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-move-build = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-package-management = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-protocol-config = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-protocol-config-macros = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-sdk = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-simulator = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-storage = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-swarm = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-swarm-config = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-test-transaction-builder = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-tls = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-transaction-checks = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
sui-types = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
telemetry-subscribers = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
test-cluster = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
typed-store = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
typed-store-error = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }

sui-execution = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }

consensus-config = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }
consensus-core = { git = "https://github.com/MystenLabs/sui", tag = "mainnet-v1.51.5" }

crypto-bigint = { version = "0.7.0-pre.6", default-features = false, features = ["serde"] }

### Workspace Members ###
dwallet-rng = { path = "crates/dwallet-rng" }
dwallet-mpc-types = { path = "crates/dwallet-mpc-types"}
dwallet-classgroups-types = { path = "crates/dwallet-classgroups-types"}
ika = { path = "crates/ika" }
ika-config = { path = "crates/ika-config" }
ika-core = { path = "crates/ika-core" }
ika-node = { path = "crates/ika-node" }
ika-sui-client = { path = "crates/ika-sui-client" }
ika-protocol-config = { path = "crates/ika-protocol-config" }
ika-swarm = { path = "crates/ika-swarm" }
ika-swarm-config = { path = "crates/ika-swarm-config" }
ika-telemetry = { path = "crates/ika-telemetry" }
ika-types = { path = "crates/ika-types" }
ika-move-packages = { path = "crates/ika-move-packages" }
ika-network = { path = "crates/ika-network" }
ika-archival = { path = "crates/ika-archival" }

[patch.crates-io]
crypto-bigint = { git = 'https://github.com/erik-3milabs/crypto-bigint.git', rev = "d0929d4" }
