[package]
name = "ika-execution"
version = "0.1.0"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Multiplexer to choose between multiple versions of ika and move execution crates."
license = "Apache-2.0"
publish = false
edition = "2021"

[dependencies]
ika-protocol-config.workspace = true
ika-types.workspace = true

move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-vm-config.workspace = true

ika-adapter-latest = { path = "latest/ika-adapter" }
ika-adapter-v0 = { path = "v0/ika-adapter" }
ika-adapter-v1 = { path = "v1/ika-adapter" }
ika-adapter-v2 = { path = "v2/ika-adapter" }
# ika-adapter-$CUT = { path = "$CUT/ika-adapter" }
ika-move-natives-latest = { path = "latest/ika-move-natives" }
ika-move-natives-v0 = { path = "v0/ika-move-natives" }
ika-move-natives-v1 = { path = "v1/ika-move-natives" }
ika-move-natives-v2 = { path = "v2/ika-move-natives" }
# ika-move-natives-$CUT = { path = "$CUT/ika-move-natives" }
ika-verifier-latest = { path = "latest/ika-verifier" }
ika-verifier-v0 = { path = "v0/ika-verifier" }
ika-verifier-v1 = { path = "v1/ika-verifier" }
ika-verifier-v2 = { path = "v2/ika-verifier" }
# ika-verifier-$CUT = { path = "$CUT/ika-verifier" }

move-abstract-interpreter-latest = { path = "../external-crates/move/crates/move-abstract-interpreter", package = "move-abstract-interpreter" }
move-abstract-interpreter-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-abstract-interpreter" }
# move-abstract-interpreter-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-abstract-interpreter" }
move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
tracing = [
    "ika-adapter-latest/tracing",
    "ika-adapter-v0/tracing",
    "ika-adapter-v1/tracing",
  "ika-adapter-v2/tracing",
#   "ika-adapter-$CUT/tracing",
    "move-vm-runtime-v0/tracing",
    "move-vm-runtime-v1/tracing",
    "move-vm-runtime-latest/tracing",
  "move-vm-runtime-v2/tracing",
#   "move-vm-runtime-$CUT/tracing",
    "move-vm-config/tracing",
]
