[package]
name = "pera-execution"
version = "0.1.0"
authors = ["Mysten Labs <eng@mystenlabs.com>"]
description = "Multiplexer to choose between multiple versions of pera and move execution crates."
license = "BSD-3-Clause-Clear"
publish = false
edition = "2021"

[dependencies]
dwallet-mpc-types.workspace = true
pera-protocol-config.workspace = true
pera-types.workspace = true

move-binary-format.workspace = true
move-bytecode-verifier-meter.workspace = true
move-vm-config.workspace = true

pera-adapter-latest = { path = "latest/pera-adapter" }
pera-adapter-v0 = { path = "v0/pera-adapter" }
pera-adapter-v1 = { path = "v1/pera-adapter" }
pera-adapter-v2 = { path = "v2/pera-adapter" }
# pera-adapter-$CUT = { path = "$CUT/pera-adapter" }
pera-move-natives-latest = { path = "latest/pera-move-natives" }
pera-move-natives-v0 = { path = "v0/pera-move-natives" }
pera-move-natives-v1 = { path = "v1/pera-move-natives" }
pera-move-natives-v2 = { path = "v2/pera-move-natives" }
# pera-move-natives-$CUT = { path = "$CUT/pera-move-natives" }
pera-verifier-latest = { path = "latest/pera-verifier" }
pera-verifier-v0 = { path = "v0/pera-verifier" }
pera-verifier-v1 = { path = "v1/pera-verifier" }
pera-verifier-v2 = { path = "v2/pera-verifier" }
# pera-verifier-$CUT = { path = "$CUT/pera-verifier" }

move-abstract-interpreter-latest = { path = "../external-crates/move/crates/move-abstract-interpreter", package = "move-abstract-interpreter" }
move-abstract-interpreter-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-abstract-interpreter" }
# move-abstract-interpreter-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-abstract-interpreter" }
move-bytecode-verifier-latest = { path = "../external-crates/move/crates/move-bytecode-verifier", package = "move-bytecode-verifier" }
move-bytecode-verifier-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-bytecode-verifier" }
move-bytecode-verifier-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-bytecode-verifier" }
move-bytecode-verifier-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-bytecode-verifier" }
# move-bytecode-verifier-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-bytecode-verifier" }
move-vm-runtime-latest = { path = "../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }
move-vm-runtime-v0 = { path = "../external-crates/move/move-execution/v0/crates/move-vm-runtime" }
move-vm-runtime-v1 = { path = "../external-crates/move/move-execution/v1/crates/move-vm-runtime" }
move-vm-runtime-v2 = { path = "../external-crates/move/move-execution/v2/crates/move-vm-runtime" }
# move-vm-runtime-$CUT = { path = "../external-crates/move/move-execution/$CUT/crates/move-vm-runtime" }

[dev-dependencies]
cargo_metadata = "0.15.4"
petgraph = "0.5.1"

[features]
default = []
gas-profiler = [
    "pera-adapter-latest/gas-profiler",
    "pera-adapter-v0/gas-profiler",
    "pera-adapter-v1/gas-profiler",
  "pera-adapter-v2/gas-profiler",
#   "pera-adapter-$CUT/gas-profiler",
    "move-vm-runtime-v0/gas-profiler",
    "move-vm-runtime-v1/gas-profiler",
    "move-vm-runtime-latest/gas-profiler",
  "move-vm-runtime-v2/gas-profiler",
#   "move-vm-runtime-$CUT/gas-profiler",
    "move-vm-config/gas-profiler",
]
