[package]
name = "class_groups_constants"
edition = "2021"
version.workspace = true

[dependencies]
twopc_mpc.workspace = true
class_groups.workspace = true
mpc.workspace = true
group.workspace = true
bcs = "0.1.6"
base64 = "0.22.1"
serde = { version = "1.0.217", features = ["derive"] }
schemars.workspace = true
anyhow.workspace = true

[lints]
workspace = true
